# JSCRM-14 FE revision-viewer
feature(backend): introduce aviary revisions controller that returns *N* next revision dates

feature(backend): introduce property to control number of next revisions

feature(frontend): introduce new api to fetch next revisions
